fix: LSDV-5459: Fix spacing between Author filter and first Paragraph

--- a/src/tags/object/Paragraphs/Paragraphs.module.scss
+++ b/src/tags/object/Paragraphs/Paragraphs.module.scss
@@ -90,6 +90,7 @@ $border-thin: 1px solid rgba(137, 128, 152, 0.16);
   position: relative;
   overflow: auto;
   counter-reset: phrase;
+  margin-top: 16px;
 }
 
 .withAudio {
